# grok-dreamcore

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  emblem_ai.py  pyproject.toml
.github/workflows/: ci.yml
config/: agent_config.py  persona.py
docs/: ARCHITECTURE.md
gateway/: adapters.py
memory/: store.py
skills/assistant/: tasks.py
skills/crypto/: bridge.py  trading.py  wallet.py
skills/portfolio/: tracker.py
skills/research/: market.py
skills/scheduling/: scheduler.py
tests/: test_all.py
tools/: llm_client.py
workflows/: automations.py
