[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emblem-ai"
version = "0.4.0"
description = "Personal Hermes agent with Emblem Vault crypto integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Adam McBride", email = "yordereal@gmail.com"}]
keywords = ["hermes", "agent", "emblem", "vault", "crypto", "personal-assistant"]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "sqlite-utils>=3.36",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
emblem = ["emblem-sdk>=0.3.0"]
gateway = ["python-telegram-bot>=21.0", "discord.py>=2.3.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.3.0"]

[project.urls]
Repository = "https://github.com/Adam-McBride/Emblem-AI"

[tool.setuptools.packages.find]
include = ["skills*", "config*", "gateway*", "memory*", "workflows*", "tools*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
